2005-05-15 MickeM
 + Added NRPE support for checkCounter
 + Updated documentation
 * Make check commands ignore case
 + Added CheckHelpers module to alter the result of various check and similar things 

2005-05-14 MickeM
 + Added support for Volumes (CheckDisk)
 + Added support for checking all drives of a certain kind
 + Added support for altering filter (makes it posible to check removale drives)
 + Created webpage and better documentation

2005-04-20 MickeM
 + Added multitasking to socket listsner (it can now handle multiple connections)
 * Fixed bug in NSClientListener now "seqv" in check_nt shouldn't happen.
 + Added COUNTER support to NSClient and CheckSystem

2005-04-19 MickeM
 + Added SSL support
 + Added alot of new options
 + Added documentation
 * Renamed and restructured NSCLientCompat to CheckSystem
 * *ALOT* of fixes all over
 : We are now starting to get to something that is "stable"
 : This means that soon you might actually be able to use this.
 
2005-03-28 MickeM
 * Changed the Thread class a bit (mutex -> signal, and CreatThread does not return the instance)
 * Moved settings "keys" fro NRPE to config.h
 * Changed build options (added Distribution) which builds a zip file under ./dist (requires 7z installed)
 * Minor tweaks to error/debug logging and small fixes "here and there"

2005-03-26 MickeM
 + NRPE Support (very basic, no encryption, and nothing fancy)
 * Socket classes rewritten
 + Added NSCModuleHelper::getSettingsSection to the API

2005-03-22 MickeM
 * Fixed NSClientListener return codes for basic commands
 * Extracted arrayBuffer code into new files under /include
 * Minor tweaks in the API (fixed minor issues)
 + Added some basic "tests" to a few commands (getToken, and arrayBuffer related)

2005-03-21 MickeM
 * Fixed BUG in inject command (now things should "work" again, but far from stable)
 + Added NRPE return code
 * Fixed some return states to NSClientListener (not verified yet, but soon they will be back in order :)
